# viz-hist

./: .gitignore  README.md  Todo.md  deploy.sh  design.md  implementation.md
backend/: migrate.py  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: folders.py  plots.py  projects.py  templates.py  versions.py
backend/tests/: conftest.py  test_folders.py  test_hardening.py  test_plots.py  test_projects.py  test_templates.py  test_versions.py
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: helpers.ts  home.spec.ts  project.spec.ts  templates.spec.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/app/templates/: page.tsx
frontend/src/components/: ChartOverlay.tsx  CustomChartCard.tsx  DiffChart.tsx  PlotCard.tsx  PlotlyChart.tsx  TemplateParamForm.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  select.tsx
frontend/src/lib/: api.ts  csv.ts  templatePrompt.ts  templates.ts  useDarkMode.ts
frontend/tests/: TemplateParamForm.test.tsx  api-types.test.ts  buildHoverTemplate.test.ts  csv.test.ts  templates.test.ts
templates/: version-histogram.js
